# Clasificacion_de_metastasis_de_cancer_de_mama_en_ganglios_linfaticos_con_Deep_Learning

./: 00_EDA_and_CNN.ipynb  01_uni_finetuning.ipynb  1200w.avif  README.md  pyproject.toml
artefactos_modelos/: mejor_cnn3.h5
