[project]
name = "tfm-pcam"
version = "0.1.0"
description = "Clasificacion binaria de PatchCamelyon con Tensorflow"
readme = "README.md"
authors = [{ name = "Montse Sacie" }]
requires-python = ">=3.11,<3.13"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
h5py = "^3.14.0"
numpy = ">=1.23.5,<2.0.0"
pandas = "^2.3.0"
matplotlib = "^3.10.0"
torch = "^2.8.0"
torchvision = "^0.23.0"
pillow = "^11.3.0"
scikit-learn = "^1.9.0"
seaborn = "^0.13.2"
tensorflow-macos = "2.14.0"
tensorflow-metal = "1.1.0"
timm = "^1.0.27"
huggingface-hub = "^1.20.1"
pydot = "^4.0.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.30.0"

[tool.poetry]
packages = [{ include = "tfm_pcam", from = "src" }]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
